<resources>
    <string name="app_name">Books</string>
    <string name="error_data_message">Error Loading data from the Google Books API</string>
    <string name="title_textview">Title TextView</string>
    <string name="search">Search</string>
    
    <string name="hint_title">Insert Title</string>
    <string name="hint_author">Insert Author(s)</string>
    <string name="hint_publisher">Insert Publisher</string>
    <string name="hint_ISBN">Insert ISBN</string>
    <string name="advance_search">Advance Search</string>
    <string name="no_search_data">Please insert Valid Search terms</string>
</resources>