<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_search_activity"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_title"
        android:inputType="textPersonName"
         />

    <EditText
        android:id="@+id/etAuthor"
        android:hint="@string/hint_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_search_activity"
        android:ems="10"
        android:inputType="textPersonName"
         />

    <EditText
        android:id="@+id/etPublisher"
        android:hint="@string/hint_publisher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="@dimen/margin_search_activity"
        android:inputType="textPersonName"
         />

    <EditText
        android:id="@+id/etISBN"
        android:hint="@string/hint_ISBN"
        android:layout_marginTop="@dimen/margin_search_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
         />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_search_activity"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/button_text_color"
        android:background="@drawable/search_button_shape"
        android:textSize="@dimen/search_button_texSize"
        android:text="@string/search" />
</LinearLayout>